--- a/src/main/resources/templates/manage/program/programManage.html
+++ b/src/main/resources/templates/manage/program/programManage.html
@@ -31,7 +31,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <form id="frmSearch" class="form-inline w-100 justify-content-end border border-bottom-0">
+                        <form id="frmSearch" class="form-inline w-100">
                             <input type="hidden" name="pageNumber" value="1">
                             <div class="form-group">
                                 <select class="form-control form-control-sm">
@@ -66,8 +66,9 @@
                                 </button>
                             </div>
                         </form>
+                        <br>
                         <div class="table-responsive">
-                            <table class="table">
+                            <table class="table table-hover table-sm">
                                 <colgroup>
                                     <col width="5%">
                                     <col width="*">
