--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -45,7 +45,7 @@
     <div class="container-fluid">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="#" class="">Dashboard</a></li>
             </ol>
         </nav>
 
@@ -74,12 +74,11 @@
                 </div>
             </div>
         </div>
-        <br>
         <div class="row">
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-body">
-                        <h3 class="card-title mb-3">Program List</h3>
+                        <h5 class="card-title mb-3">Program List</h5>
 
                     </div>
                 </div>
@@ -89,45 +88,8 @@
                     <div class="card-body">
                         <h5 class="card-title mb-3">Batch List</h5>
                         <ul class="timeline">
-                            <li>
-                                <a target="_blank" href="https://www.totoprayogo.com/#">New Web Design</a>
-                                <a href="#" class="float-right">21 March, 2014</a>
-                            </li>
-                            <li>
-                                <a href="#">21 000 Job Seekers</a>
-                                <a href="#" class="float-right">4 March, 2014</a>
-                            </li>
-                            <li>
-                                <a href="#">Awesome Employers</a>
-                                <a href="#" class="float-right">1 April, 2014</a>
-                            </li>
-                            <li>
-                                <a target="_blank" href="https://www.totoprayogo.com/#">New Web Design</a>
-                                <a href="#" class="float-right">21 March, 2014</a>
-                            </li>
-                            <li>
-                                <a href="#">21 000 Job Seekers</a>
-                                <a href="#" class="float-right">4 March, 2014</a>
-                            </li>
-                            <li>
-                                <a href="#">Awesome Employers</a>
-                                <a href="#" class="float-right">1 April, 2014</a>
-                            </li>
-                            <li>
-                                <a target="_blank" href="https://www.totoprayogo.com/#">New Web Design</a>
-                                <a href="#" class="float-right">21 March, 2014</a>
-                            </li>
-                            <li>
-                                <a href="#">21 000 Job Seekers</a>
-                                <a href="#" class="float-right">4 March, 2014</a>
-                            </li>
-                            <li>
-                                <a href="#">Awesome Employers</a>
-                                <a href="#" class="float-right">1 April, 2014</a>
-                            </li>
-                            <li>
-                                <a href="#">Awesome Employers</a>
-                                <a href="#" class="float-right">1 April, 2014</a>
+                            <li th:each="hist : ${histList}">
+                                <a href="#" th:text="${hist}"></a>
                             </li>
                         </ul>
                     </div>
