--- a/src/main/resources/templates/manage/program/programManage.html
+++ b/src/main/resources/templates/manage/program/programManage.html
@@ -38,9 +38,9 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <form id="frmSearch" class="mb-4">
+                        <form id="frmSearch" class="mb-2">
                             <input type="hidden" name="pageNumber" value="1">
-                            <div class="form-inline w-100 mb-2">
+                            <div class="form-inline w-100 mb-1">
                                 <div class="form-group">
                                     <select class="form-control form-control-sm">
                                         <option>Idx</option>
@@ -75,9 +75,9 @@
                                     </select>
                                 </div>
                                 <div class=" form-group">
-                                    <input type="text" class="form-control w-100 form-control-sm" placeholder="Entered Program Name"/>
+                                    <input type="text" class="form-control form-control-sm" placeholder="Entered Program Name"/>
                                 </div>
-                                <div class=" form-group">
+                                <div class="form-group ml-2">
                                     <button class="btn btn-outline-primary btn-sm">
                                         <i class="fas fa-search"></i> Search
                                     </button>
