--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -39,8 +39,8 @@
                         Monitoring
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="monitor_dropdown">
+                        <a class="dropdown-item" href="/monitor/program">Program List</a>
                         <a class="dropdown-item" href="#">Url Manage</a>
-                        <a class="dropdown-item" href="#">Program Manage</a>
                         <a class="dropdown-item" href="#">Alarm Manage</a>
                     </div>
                 </li>
