--- a/src/main/resources/templates/manage/program/programManage.html
+++ b/src/main/resources/templates/manage/program/programManage.html
@@ -27,7 +27,9 @@
                         </p>
                         <div class="form-inline">
                             <div class="form-group pr-1">
-                                <button class="btn btn-outline-primary btn-sm" onclick="addOpenModal(); return false;">ADD</button>
+                                <button class="btn btn-outline-primary btn-sm" onclick="addOpenModal(); return false;">
+                                    <i class="far fa-plus-square"></i> ADD
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -90,9 +92,9 @@
                                     <col width="5%">
                                     <col width="*">
                                     <col width="10%">
+                                    <col width="15%">
                                     <col width="10%">
-                                    <col width="10%">
-                                    <col width="10%">
+                                    <col width="15%">
                                 </colgroup>
                                 <thead>
                                 <tr>
