--- a/src/main/resources/templates/manage/url/urlManage.html
+++ b/src/main/resources/templates/manage/url/urlManage.html
@@ -29,6 +29,22 @@
                         <p class="card-text">
                             모니터링하기 위한 URL을 등록/수정 할 수 있는 관리 페이지 입니다.
                         </p>
+                        <div class="form-inline">
+                            <div class="form-group pr-1">
+                                <a class="btn btn-outline-primary btn-sm" href="/manage/url/form">
+                                    <i class="far fa-plus-square"></i> ADD
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <!--<div class="col-sm-6 col-xs-12">-->
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
                         <form id="frmSearch" class="form-inline">
                             <input type="hidden" name="pageNumber" value="1">
                             <!--<div class="form-group pr-1">-->
@@ -40,15 +56,11 @@
                             <!--<div class="form-group pr-1">-->
                             <!--<input type="text" class="form-control form-control-sm" placeholder="Entered Program Name"/>-->
                             <!--</div>-->
-                            <div class="form-group pr-1">
-                                <a class="btn btn-outline-primary btn-sm" href="/manage/url/form">
-                                    <i class="far fa-plus-square"></i> ADD
-                                </a>
-                            </div>
+
                         </form>
                         <br>
                         <div class="table-responsive">
-                            <table class="table">
+                            <table class="table table-hover table-sm">
                                 <thead>
                                 <tr>
                                     <th class="text-center">IDX</th>
