--- a/src/main/resources/templates/monitor/program/programList.html
+++ b/src/main/resources/templates/monitor/program/programList.html
@@ -1,10 +1,150 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:paging="http://www.w3.org/1999/xhtml"
+      layout:decorate="~{layouts/layout}">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Program Monitor</title>
 </head>
-<body>
+<div layout:fragment="page_content" id="page_content">
+    <div class="container-fluid">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+                <li class="breadcrumb-item active" aria-current="page">(Monitor) Program List</li>
+            </ol>
+        </nav>
 
-</body>
-</html>
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Program List</h5>
+                        <p class="card-text">
+                            <!--프로그램 등록/수정이 가능한 관리 페이지 입니다.-->
+                        </p>
+                        <div class="form-inline">
+                            <div class="form-group pr-1">
+                                <!--<button class="btn btn-outline-primary btn-sm" onclick="addOpenModal(); return false;">-->
+                                    <!--<i class="far fa-plus-square"></i> ADD-->
+                                <!--</button>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <form id="frmSearch" class="mb-2">
+                            <input type="hidden" name="pageNumber" value="1">
+                            <div class="form-inline w-100 mb-1">
+                                <div class="form-group">
+                                    <select class="form-control form-control-sm">
+                                        <option>Idx</option>
+                                        <option>Program Name</option>
+                                        <option>Created At</option>
+                                        <option>Updated At</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <select class="form-control form-control-sm">
+                                        <option>Desc</option>
+                                        <option>Asc</option>
+                                    </select>
+                                </div>
+
+                                <div class="form-group mr-2">
+                                    <select class="form-control form-control-sm">
+                                        <option>20 Row</option>
+                                        <option>50 Row</option>
+                                        <option>100 Row</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-inline w-100">
+                                <div class=" form-group">
+                                    <select class="form-control form-control-sm">
+                                        <option>==Search Type==</option>
+                                        <option>Created User Id</option>
+                                        <option>Updated User Id</option>
+                                        <option>Program Name</option>
+                                        <option>Memo</option>
+                                    </select>
+                                </div>
+                                <div class=" form-group">
+                                    <input type="text" class="form-control form-control-sm" placeholder="Entered Program Name"/>
+                                </div>
+                                <div class="form-group ml-2">
+                                    <button class="btn btn-outline-primary btn-sm">
+                                        <i class="fas fa-search"></i> Search
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                        <div class="table-responsive">
+                            <table class="table table-hover table-sm">
+                                <colgroup>
+                                    <col width="5%">
+                                    <col width="*">
+                                    <col width="10%">
+                                    <col width="15%">
+                                    <col width="10%">
+                                    <col width="15%">
+                                </colgroup>
+                                <thead>
+                                <tr>
+                                    <th class="text-center">IDX</th>
+                                    <th style="min-width: 180px;">Program Name</th>
+                                    <!--<th class="text-center">Memo</th>-->
+                                    <th class="text-center">Created User Id</th>
+                                    <th class="text-center">Created At</th>
+                                    <th class="text-center">Updated User Id</th>
+                                    <th class="text-center">Updated At</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="result : ${resultList}">
+                                    <td class="text-center" th:text="${result.programIdx}"></td>
+                                    <td>
+                                        <a th:href="|/monitor/program/${result.programIdx}|">
+                                            <div th:with="condition=${#strings.isEmpty(result.programName)} == false and ${#strings.length(result.programName)} > 30"
+                                                 th:remove="tag">
+                                                <span th:if="${condition}" th:text="|${#strings.substring(result.programName, 0, 30)}...|"
+                                                      th:remove="tag"></span>
+                                                <span th:unless="${condition}" th:text="${result.programName}"></span>
+                                            </div>
+                                        </a>
+                                    </td>
+
+                                    <td class="text-center" th:text="${result.createdUserId}"></td>
+                                    <td class="text-center" th:text="${result.createdAt}"></td>
+                                    <td class="text-center" th:text="${result.updatedUserId}"></td>
+                                    <td class="text-center" th:text="${result.updatedAt}"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+
+                            <nav aria-label="Page navigation">
+                                <ul class="pagination justify-content-end" paging:pagination="${pagination}" jsFuncName="movePageCustom">
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<th:block layout:fragment="includeScripts">
+</th:block>
+<th:block layout:fragment="scripts">
+    <script>
+        function movePageCustom(pageNo) {
+            $("#frmSearch [name='pageNumber']").val(pageNo);
+            $("#frmSearch").submit();
+        }
+    </script>
+</th:block>
