--- a/src/main/resources/templates/monitor/program/programSingle.html
+++ b/src/main/resources/templates/monitor/program/programSingle.html
@@ -35,17 +35,30 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
-
-                        <div class="table-responsive">
-
-
+            <div class="col-sm-12 col-md-6" th:each="urlInfo : ${urlList}">
+                <div class="card ">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="text-info text-center mt-3">
+                                <h1 th:if="${urlInfo.healthStatusCd.toString().equals('HEALTH')}">
+                                    <i class="fas fa-smile-wink fa-2x" style="color: #659bf2;"></i>
+                                </h1>
+                                <h1 th:if="${urlInfo.healthStatusCd.toString().equals('WARNING')}">
+                                    <i class="fas fa-exclamation-circle fa-2x" style="color: #f7a151;"></i>
+                                </h1>
+                                <h1 th:if="${urlInfo.healthStatusCd.toString().equals('ERROR')}">
+                                    <i class="fas fa-skull-crossbones fa-2x" style="color: #f70404;"></i>
+                                </h1>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="text-info text-center mt-3"><h4 th:text="${urlInfo.healthStatusCd}"></h4></div>
+                            <div class="text-info text-center mt-2"><h4 th:text="${urlInfo.urlName}"></h4></div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
