--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -6,41 +6,6 @@
 <head>
     <title>Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/billboard.js/1.7.1/billboard.min.css"/>
-    <style>
-        ul.timeline {
-            list-style-type: none;
-            position: relative;
-        }
-
-        ul.timeline:before {
-            content: ' ';
-            background: #d4d9df;
-            display: inline-block;
-            position: absolute;
-            left: 14px;
-            width: 2px;
-            height: 100%;
-            z-index: 400;
-        }
-
-        ul.timeline > li {
-            margin: 10px 0;
-            padding-left: 10px;
-        }
-
-        ul.timeline > li:before {
-            content: ' ';
-            background: white;
-            display: inline-block;
-            position: absolute;
-            border-radius: 20%;
-            border: 3px solid #22c0e8;
-            left: 10px;
-            width: 10px;
-            height: 10px;
-            z-index: 400;
-        }
-    </style>
 </head>
 <div layout:fragment="page_content" id="page_content">
     <div class="container-fluid">
@@ -163,15 +128,11 @@
         //TODO : 로컬스토리지를 사용하여 자동갱신 멈춤
 
         function getChartData() {
-            $.ajax({
-                url: "/monitor/url/api/v1/hist",
-                type: 'GET',
-                async: false,
-                dataType: 'json',
-                error: function (error) {
-                    alert("실패");
-                },
-                success: function (data) {
+            var url = '/dashboard/api/v1/monitor/hist';
+
+            axios.get(url)
+                .then(function (response) {
+                    var data = response.data.data;
 
                     var rtnData = [];
                     for (var tmpIndex in data) {
@@ -186,8 +147,26 @@
                     }
 
                     initChart(rtnData);
-                }
-            });
+                })
+                .catch(function (error) {
+                    if (error.response) {
+                        console.log(error.response.data);
+                        console.log(error.response.status);
+                        console.log(error.response.headers);
+                    }
+
+                    if (error.response.status === 401) {
+                        console.log(error);
+                        alert("실패 401: " + error);
+                        location.href = "/login";
+                    } else if (error.response.status === 403) {
+                        console.log(error);
+                        alert("실패 403: " + error);
+                    } else {
+                        console.log("error : ", error);
+                        alert("실패 Else : " + error);
+                    }
+                });
         }
 
         function initChart(rtnData) {
