--- a/src/main/resources/templates/manage/alarm/alarmManage.html
+++ b/src/main/resources/templates/manage/alarm/alarmManage.html
@@ -29,15 +29,22 @@
                                 <input type="text" class="form-control form-control-sm" placeholder="Entered Program Name"/>
                             </div>
                         </form>
-                        <div class="btn-group btn-group-sm" role="group" aria-label="First group">
-                            <button type="button"
-                                    th:each="channel : ${alarmChannelCd}"
-                                    class="btn btn-outline-success btn-sm"
-                                    th:text="${channel.cdNm}"
-                                    th:data-channel="${channel}"
-                                    onclick="openModal(this);"
-                            >
+
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-danger btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false">
+                                Action
                             </button>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" th:each="channel : ${alarmChannelCd}"
+                                   th:data-channel="${channel}"
+                                   onclick="openModal(this);"
+                                   style="cursor: pointer;"
+                                >
+                                    <i th:class="${channel.faIconClasses}"></i>
+                                    <span class="pl-1" th:text="${channel.cdNm}"></span>
+                                </a>
+                            </div>
                         </div>
                         <br>
                         <br>
