--- a/src/main/resources/templates/system/userManage.html
+++ b/src/main/resources/templates/system/userManage.html
@@ -2,16 +2,108 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:paging="http://www.thymeleaf.org"
       layout:decorate="~{layouts/layout}">
 <head>
     <title>User Manage</title>
+
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/billboard.js/1.7.1/billboard.min.css"/>-->
 </head>
+
 <div layout:fragment="page_content" id="page_content">
     <div class="container-fluid">
-        User Manage
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="#">System</a></li>
+                <li class="breadcrumb-item active" aria-current="page">User Manage</li>
+            </ol>
+        </nav>
+
+        <div class="row">
+            <!--<div class="col-sm-6 col-xs-12">-->
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">User Manage</h3>
+                        <p class="card-text">
+                            <!--모니터링하기 위한 URL을 등록/수정 할 수 있는 관리 페이지 입니다.-->
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <!--<div class="col-sm-6 col-xs-12">-->
+            <div class="col">
+                <div class="card">
+                    <div class="card-body">
+                        <form id="frmSearch" class="form-inline">
+                            <input type="hidden" name="pageNumber" value="1">
+                            <!--<div class="form-group pr-1">-->
+                            <!--<select class="form-control form-control-sm">-->
+                            <!--<option>테스트</option>-->
+                            <!--<option>테스트2222</option>-->
+                            <!--</select>-->
+                            <!--</div>-->
+                            <!--<div class="form-group pr-1">-->
+                            <!--<input type="text" class="form-control form-control-sm" placeholder="Entered Program Name"/>-->
+                            <!--</div>-->
+
+                        </form>
+                        <br>
+                        <div class="table-responsive">
+                            <table class="table table-hover table-sm">
+                                <thead>
+                                <tr>
+                                    <th class="text-center">userId</th>
+                                    <th class="text-center">email</th>
+                                    <th>enable</th>
+                                    <th>locked</th>
+                                    <th class="text-center">Function</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="result : ${resultList}">
+                                    <td class="text-center" th:text="${result.userId}"></td>
+                                    <td class="text-center" th:text="${result.email}"></td>
+                                    <td th:text="${result.enable}"></td>
+                                    <td th:text="${result.locked}"></td>
+                                    <td class="text-center">
+                                        <a class="btn btn-outline-warning btn-sm">
+                                            <i class="far fa-edit"></i> Password Change
+                                        </a>
+                                        <a class="btn btn-outline-warning btn-sm">
+                                            <i class="far fa-edit"></i> MODIFY
+                                        </a>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+
+                            <nav aria-label="Page navigation">
+                                <ul class="pagination justify-content-end" paging:pagination="${pagination}" jsFuncName="movePageCustom">
+                                </ul>
+                            </nav>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+<th:block layout:fragment="includeScripts">
+    <!--<script src="https://d3js.org/d3.v4.min.js"></script>-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/billboard.js/1.7.1/billboard.min.js"></script>-->
+</th:block>
 <th:block layout:fragment="scripts">
     <script>
+        function movePageCustom(pageNo) {
+            $("#frmSearch [name='pageNumber']").val(pageNo);
+            $("#frmSearch").submit();
+        }
     </script>
 </th:block>
+</html>
+
