--- a/src/main/resources/templates/manage/program/programManage.html
+++ b/src/main/resources/templates/manage/program/programManage.html
@@ -151,11 +151,25 @@
                                 </tr>
                                 </tbody>
                             </table>
-
-                            <nav aria-label="Page navigation">
-                                <ul class="pagination justify-content-end" paging:pagination="${pagination}" jsFuncName="movePageCustom">
-                                </ul>
-                            </nav>
+                        </div>
+                        <div class="row">
+                            <div class="col-3">
+                                <button class="btn btn-outline-primary btn-sm" onclick="addOpenModal(); return false;">
+                                    <i class="far fa-plus-square"></i> ADD
+                                </button>
+                                <button class="btn btn-outline-primary btn-sm" onclick="addOpenModal(); return false;">
+                                    <i class="far fa-plus-square"></i> ADD
+                                </button>
+                                <button class="btn btn-outline-primary btn-sm" onclick="addOpenModal(); return false;">
+                                    <i class="far fa-plus-square"></i> ADD
+                                </button>
+                            </div>
+                            <div class="col-9">
+                                <nav aria-label="Page navigation">
+                                    <ul class="pagination justify-content-end" paging:pagination="${pagination}" jsFuncName="movePageCustom">
+                                    </ul>
+                                </nav>
+                            </div>
                         </div>
                     </div>
                 </div>
