--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -103,7 +103,7 @@
 <th:block layout:fragment="scripts">
     <script>
         function enterLogin() {
-            if (event.keyCode == 13) {
+            if (event.keyCode === 13) {
                 login();
             }
         }
